<resources>
    <string name="app_name">SistEval</string>
    <string name="text_accounts">Todos los usuarios</string>
    <string name="hint_name">Nombre Docente</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirmar Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrar</string>
    <string name="error_message_name">Escriba el Nombre completo</string>
    <string name="error_message_cct">Escriba completo el CCT (10 digitos)</string>
    <string name="error_message_nomescuela">Escriba el Nombre de la Escuela completo</string>
    <string name="error_message_Grado">Escriba el grado (1, 2, 3)</string>
    <string name="error_message_Grupo">Escriba el grupo (A, B, C)</string>
    <string name="error_message_email">Escriba un Email Valido</string>
    <string name="error_message_age">Escriba la Edad correcta</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registro Completado</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Ya Existe</string>
    <string name="error_password_match">Password no Coinciden</string>
    <string name="error_valid_email_password">Email or Password Incorrecto</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Usuarios Registrados</string>
    <string name="text_title">Sistema Generador de Actividades y Evaluación</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="no_tienes_cuenta_crea_una">No tienes cuenta? Crea una</string>
    <string name="password">Password</string>
    <string name="usuarios_registrados_sisteval">Usuarios Registrados SISTEVAL</string>
    <string name="usuario_registrado">Usuario registrado</string>
    <string name="ya_eres_usuario_login">Ya eres usuario? Login</string>
    <string name="cct">CCT</string>
    <string name="nombre_escuela">Nombre Escuela</string>
    <string name="grado">Grado</string>
    <string name="grupo">Grupo</string>
    <string name="registrar_usuario">REGISTRAR USUARIO</string>
    <string name="inicio">INICIO</string>
    <string name="usuario">Usuario</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="title_activity_menu_opciones">MenuOpciones</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="uagro_conacyt_miidt">UAGro-CONACYT-MIIDT</string>
    <string name="sistema_generador_de_actividades_y_registro_de_evaluacion">Sistema Generador de Actividades y Registro de Evaluacion</string>
    <string name="ImgLogo">TODO</string>
    <string name="con_este_sistema_podr_el_docente_llevar_a_cabo_el_seguimiento_de_aprendizajes_de_estudiantes_de_3er_grado_del_nivel_preescolar">Con este sistema podrá el docente llevar a cabo el seguimiento de aprendizajes de estudiantes de 3er grado del nivel Preescolar</string>
    <string name="escuela">ESCUELA:</string>
    <string name="docente">DOCENTE:</string>
    <string name="sistema_generador_de_contenidos_y_evaluaci_n_para_el_nivel_preescolar">Sistema Generador de Contenidos y Evaluación para el Nivel Preescolar</string>
    <string name="bienvenida">BIENVENIDA</string>
    <string name="todo">TODO</string>
    <string name="pasa_la_etiqueta_en_el_rfid">Pasa la etiqueta en el RFID</string>
    <string name="desconectar">DESCONECTAR</string>
    <string name="sn">SN:</string>
    <string name="nombre_objeto">Nombre Objeto</string>
    <string name="registrar">REGISTRAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="dispositivos_vinculados">DISPOSITIVOS VINCULADOS</string>
    <string name="men_principal">Menú Principal</string>
    <string name="agregar_objeto">Agregar Objeto</string>
    <string name="objeto">Objeto:</string>
    <string name="registrar_actividad">Registrar Actividad</string>
    <string name="crear_actividades">CREAR ACTIVIDADES:</string>
    <string name="momento">Momento:</string>
    <string name="nombre_de_la_actividad">Nombre de la Actividad :</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="serial">Serial:</string>
    <string name="registrar_alumno">Registrar Alumno</string>
    <string name="ir_registro">Ir Registro</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="matr_cula">Matrícula</string>
    <string name="lista_de_alumnos">Lista de Alumnos</string>
    <string name="alumnos_registrados">Alumnos Registrados</string>
    <string name="numero_de_serie">Numero de serie</string>
    <string name="id_tag">Id Tag</string>

</resources>
