<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="1"
    tools:context="com.malibuzee.sisteval.activities.CrearActividad">

    <TextView
        android:id="@+id/textCrearAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_actividades"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textNombreAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_la_actividad"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextActividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:inputType="text"
            android:shadowColor="@color/cardview_dark_background"
            android:textAlignment="viewStart"
            android:textColor="@color/cardview_dark_background"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="@color/cardview_dark_background"
            android:textColorLink="@color/cardview_dark_background"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCAmomentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/momento"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCAMomentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="visible" />
    </LinearLayout>

    <!--android:onClick="irregistro"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCAobjetos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objeto"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerCAObjetos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/buttonAgregarObjeto"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:background="#00bcd4"
            android:text="@string/agregar_objeto" />
    </LinearLayout>

    <!--android:onClick="irregistro"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonRegistrarActividad"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:background="#00bcd4"
            android:text="@string/registrar_actividad" />

        <Button
            android:id="@+id/buttonPpal"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="irprincipal"
            android:text="@string/men_principal"
            android:textColor="@android:color/background_light"
            tools:ignore="OnClick" />
    </LinearLayout>

</LinearLayout>
